@@ -29,6 +29,7 @@ endif::[]
 * Fixed service name discovery based on MANIFEST.MF file through `ServletContainerInitializer#onStartup` on Jakarta Servlet containers -
 {pull}2546[#2546]
 * Fix shaded classloader package definition - {pull}2566[#2566]
+* Fix logging initialization with Security Manager - {pull}2568[#2568]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
